--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ a,
 .lead {
     font-size: 18px;
     line-height: 30px;
-    color: #767676;
+    color: #FF8C00;
     margin: 0;
     padding: 0;
 }
@@ -381,7 +381,7 @@ a img.aligncenter {
 
 
 .header_style_01 {
-    background-color: rgba(255, 255, 255);
+    background-color: #FF8C00;
     display: block;
     left: 0;
     position: relative;
@@ -431,7 +431,7 @@ a img.aligncenter {
 	color: #ffffff;
 	box-shadow: 0 4px 3px 0 rgba(5, 16, 44, .15);
 	border-radius: 10px;
-	background: #cdd51f;
+	background: #FF8C00;
 }
 
 .header_style_01 .navbar-light .navbar-nav > li:hover a,
@@ -439,7 +439,7 @@ a img.aligncenter {
     color: #ffffff;
 	box-shadow: 0 4px 3px 0 rgba(5, 16, 44, .15);
 	border-radius: 10px;
-	background: #cdd51f;
+	background: #FF8C00;
 }
 
 .header_style_01 .navbar-right > li {
@@ -477,7 +477,7 @@ li.social-links a {
 .navbar-light .navbar-toggler {
 	padding: 10px 8px 8px 8px;
 	border-radius: 0px;
-	border-color: #cdd51f;
+	border-color: #FF8C00;
 	float: right;
 	margin-top: 12px;
 }
@@ -547,7 +547,7 @@ li.social-links a {
 }
 
 .slide-text h1 span{
-	color: #cdd51f;
+	color: #FF8C00;
 }
 
 .slide-text h2 {
@@ -570,9 +570,9 @@ li.social-links a {
 	border-radius: 10px;
 }
 
-.slider-wrapper .owl-nav .owl-prev:hover, .slider-wrapper .owl-nav .owl-next:hover {
+/* .slider-wrapper .owl-nav .owl-prev:hover, .slider-wrapper .owl-nav .owl-next:hover {
 	background: #201e21;
-}
+} */
 
 .slider-wrapper .owl-nav .owl-prev {
     margin-left: 0%;
@@ -658,7 +658,7 @@ li.social-links a {
     width: 100%;
     height: 100%;
     display: block;
-    background: #cdd51f;
+    background: #FF8C00;
     position: absolute;  
     left: 0%;
     opacity: 1;
@@ -1726,7 +1726,7 @@ hr.invis1 {
     border-radius: 10px;
     font-size: 26px;
 	color: #ffffff;
-    background-color: #cdd51f;
+    background-color: #FF8C00;
     margin: 0 auto 22px;
     position: relative;
     text-align: center;
