--- a/style.css
+++ b/style.css
@@ -217,7 +217,13 @@ blockquote {
     margin: 20px 0 20px;
     padding: 30px;
 }
+.card
+{
+    padding:.5%;
+    margin-left:1%;
+    margin-right:1%;
 
+}
 ul, li, ol{
 	margin: 0px;
 	padding: 0px;
@@ -365,7 +371,7 @@ a img.aligncenter {
 	font-size: 16px;
 }
 .email-box a:hover{
-	color: #cdd51f;
+	color: #ff8c00;
 }
 .email-box a i{
 	padding: 0px 5px;
@@ -379,7 +385,7 @@ a img.aligncenter {
 	font-size: 16px;
 }
 .phone-box a:hover{
-	color: #cdd51f;
+	color: #ff8c00;
 }
 .phone-box a i{
 	padding: 0px 5px;
@@ -399,7 +405,7 @@ a img.aligncenter {
 	font-size: 20px;
 }
 .social-box ul li a:hover{
-	color: #cdd51f;
+	color: #ff8c00;
 }
 
 
@@ -589,7 +595,7 @@ li.social-links a {
 }
 
 .slider-wrapper .owl-nav .owl-prev, .slider-wrapper .owl-nav .owl-next {
-    background: #cdd51f;
+    background: #ff8c00;
     height: 60px;
     top: 50%;
     transform: translateY(-50%);
@@ -944,7 +950,7 @@ li.social-links a {
 .portfolio-filter ul li .btn-dark {
     box-shadow: none;
     background-color: transparent;
-    border: 2px solid #cdd51f !important;
+    border: 2px solid #ff8c00 !important;
     color: #393939;
     font-weight: 500;
     font-size: 14px;
@@ -998,7 +1004,7 @@ li.social-links a {
 }
 
 .da-thumbs .pitem a div i {
-    background-color: #cdd51f;
+    background-color: #ff8c00;
     position: absolute;
     color: #ffffff !important;
     bottom: 0;
@@ -1029,7 +1035,7 @@ li.social-links a {
 }
 
 .desc h3 i {
-    color: #cdd51f;
+    color: #ff8c00;
     font-size: 37px;
     vertical-align: middle;
     margin-right: 12px;
@@ -1039,7 +1045,7 @@ li.social-links a {
     padding: 30px;
     position: relative;
     background: #393939;
-    border: 4px solid #cdd51f;
+    border: 4px solid #ff8c00;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
@@ -1374,7 +1380,7 @@ li.social-links a {
     color: #1f1f1f;
 }
 
-.service-widget p {
+p {
     margin-bottom: 0;
     padding-bottom: 0;
 	font-size: 13px;
@@ -1408,7 +1414,7 @@ li.social-links a {
     padding-top: 10px;
     font-size: 19px;
     font-style: normal;
-    color: #cdd51f;
+    color: #ff8c00;
     padding-bottom: 0;
 }
 
@@ -1443,7 +1449,7 @@ li.social-links a {
 	font-size: 16px;
 }
 .message-box ul li i{
-	color: #cdd51f;
+	color: #ff8c00;
 	font-size: 24px;
 	padding-right: 10px;
 }
@@ -1472,7 +1478,7 @@ li.social-links a {
 }
 
 .hoverbutton {
-    background-color: #cdd51f;
+    background-color: #ff8c00;
     position: absolute;
     color: #ffffff !important;
     top: 0;
@@ -1659,7 +1665,7 @@ hr.invis1 {
 
 .customwidget li i {
     margin-right: 5px;
-	color: #cdd51f;
+	color: #ff8c00;
 }
 
 .customwidget li {
@@ -2294,7 +2300,7 @@ select.mobile-device {
 
 .footer-links a:hover,
 .footer a:hover {
-    color: #cdd51f !important;
+    color: #ff8c00 !important;
 }
 
 .footer-links li {
@@ -2335,7 +2341,7 @@ select.mobile-device {
 }
 .footer-recent ul li i{
 	font-size: 14px;
-	color: #cdd51f;
+	color: #ff8c00;
 }
 .footer-recent ul li span {
 	font-size: 12px;
@@ -2375,7 +2381,7 @@ select.mobile-device {
 	font-size: 16px;
 }
 .social-list li a:hover{
-	border: 3px solid #cdd51f;
+	border: 3px solid #ff8c00;
 }
 
 
@@ -2422,7 +2428,7 @@ select.mobile-device {
 }
 
 .footer-distributed .footer-company-name a:hover{
-	color: #cdd51f;
+	color: #ff8c00;
 }
 
 
@@ -2559,7 +2565,7 @@ select.mobile-device {
 }
 
 .dmtop:hover {
-	background-color: #cdd51f;
+	background-color: #ff8c00;
 }
 
 .icon_wrap {
@@ -2578,7 +2584,7 @@ select.mobile-device {
 .stat-wrap h3 {
     font-size: 22px;
     font-weight: 600;
-    color: #cdd51f;
+    color: #ff9767;
     margin: 0 !important;
     padding: 0 !important;
     line-height: 1 !important:
@@ -2601,6 +2607,7 @@ select.mobile-device {
 	width: 100%;
 	height: 1px;
 	background: #ffffff;
+    color:#ff9767;
 	display: block;
 	-webkit-transform-origin: left top;
 	-ms-transform-origin: left top;
@@ -2612,12 +2619,6 @@ select.mobile-device {
 	transition: transform 0.4s cubic-bezier(1, 0, 0, 1)
 }
 .stat-wrap .line-hv:hover::before {
-  -webkit-transform-origin: right top;
-  -ms-transform-origin: right top;
-  transform-origin: right top;
-  -webkit-transform: scale(1, 1);
-  -ms-transform: scale(1, 1);
-  transform: scale(1, 1)
 }
 
 #preloader {
@@ -2627,7 +2628,7 @@ select.mobile-device {
     right: 0;
     bottom: 0;
     left: 0;
-    background: #cdd51f;
+    background: #ff8c00;
     z-index: 11000;
     position: fixed;
     display: block;
@@ -3090,9 +3091,9 @@ select.mobile-device {
 .btn-light {
     padding: 13px 40px;
     font-size: 18px;
-    border: 2px solid #cdd51f;
+    border: 2px solid #ff8c00;
     color: #ffffff;
-    background-color: #cdd51f;
+    background-color: #ff8c00;
 }
 
 .btn-dark {
@@ -3105,7 +3106,7 @@ select.mobile-device {
 
 .btn-light:hover,
 .btn-light:focus {
-    border-color: #cdd51f;
+    border-color: #ff8c00;
     color: rgba(255, 255, 255);
 	background: #393939;
 }
@@ -3256,7 +3257,7 @@ select.mobile-device {
 .about-icon span{
 	font-size: 48px;
 	color: #393939;
-	background: #cdd51f;
+	background: #ff8c00;
 	padding: 10px;
 	border-radius: 10px;
 }
@@ -3270,7 +3271,7 @@ select.mobile-device {
 	color: #393939;
 }
 .about-text h3 a:hover{
-	color: #cdd51f;
+	color: #ff8c00;
 }
 
 .about-item:hover .about-icon{
@@ -3308,7 +3309,7 @@ select.mobile-device {
     transition: all 0.5s ease 0s;
 }
 .pricingTable:hover{
-    background: #cdd51f;
+    background: #ff8c00;
     border-color: #fff;
     color: #fff;
 }
@@ -3375,9 +3376,9 @@ select.mobile-device {
     right: 0;
     transition: all 0.5s ease 0s;
 }
-.pricingTable:hover .pricing-content:before{ background: #cdd51f; }
+.pricingTable:hover .pricing-content:before{ background: #ff8c00; }
 .pricingTable .pricingTable-signup{  
-	border: 1px solid #cdd51f;
+	border: 1px solid #ff8c00;
     color: #043565;
 	top: 0;
     transition: all 0.5s ease 0s;
@@ -3436,12 +3437,15 @@ select.mobile-device {
 .address-item h3{
 	font-size: 28px;
 	font-weight: 600;
-	color: #cdd51f;
+	color: #ff8c00;
 }
 
 
 .dmtop.show {
     bottom: 20px;
+}
+.owl-next i, .owl-prev i {
+    background-color: #ff8c00;
 }
 
 
